prepare for ci/cd